# Steps

./: README.md  real_robot_control.py
IK/: Spot_class.py  my_file.py
motion_imitation/: CMakeLists.txt  package.xml
motion_imitation/launch/: a1_sim.launch
motion_imitation/robots/: a1_robot.py  minitaur.py
motion_imitation/src/: hi2lowres.py  rateTest.py  whole_body_controller_example.py
robot_interface/: CMakeLists.txt  README.md  package.xml  standing_2021-12-13-10-36-37.bag  standing_loaded5_2021-12-13-10-37-55.bag  standing_low-12_2021-12-13-13-15-30.bag  standing_low12_2021-12-13-13-16-33.bag  standing_low12_2021-12-13-13-16-33.csv  standing_pitch-02_2021-12-13-10-46-52.bag  standing_pitch02_2021-12-13-10-45-40.bag  standing_roll-02_2021-12-13-10-43-25.bag  standing_roll02_2021-12-13-10-42-01.bag  standing_yaw-03_2021-12-13-13-10-17.bag  standing_yaw03_2021-12-13-13-09-19.bag  wacircle_a.big_2021-12-15-11-33-24.bag  wacircle_a.c_2021-12-15-11-27-25.bag  wacircle_a.d_2021-12-15-11-30-43.bag  wacircle_a.d_2021-12-15-11-30-48.bag  wacircle_a.d_2021-12-15-11-30-48.csv  wacircle_a.david_2021-12-15-11-36-31.bag  wacircle_a.f_2021-12-15-11-31-55.bag  wacircle_a_2021-12-15-11-25-09.bag  walking70a_2021-12-15-11-06-56.bag  walking70a_2021-12-15-11-06-56.csv  walking70b.c_2021-12-15-11-19-02.bag  walking70b.d_2021-12-15-11-21-00.bag  walking70b_2021-12-15-11-18-07.bag
robot_interface/scripts/: Contact_Est.py  Est_IMUcentric.py  Models.py  Quaternion.py  Vis_simple.py  a1.py  est_interface.py  imuC2012.py  keyboard_listener.py  (+11 more)
unitree_ros_to_real/: README.md
(+9 files in other folders)
